--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
+    "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.0"
   },
