--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "sequelize": "^6.32.0"
   },
   "devDependencies": {
